--- a/style.css
+++ b/style.css
@@ -392,6 +392,7 @@ section {
 }
 
 .details-container {
+  perspective: 1000px;
   padding: .5rem;
   flex: 1;
   background: white;
@@ -417,6 +418,7 @@ section {
 
 #experience {
   position: relative;
+  /* justify-content: space-between; */
 }
 
 .experience-sub-title {
@@ -427,6 +429,7 @@ section {
 }
 
 .experience-details-container {
+  perspective: 1000px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -462,6 +465,19 @@ article .icon {
   border-color: rgb(163, 163, 163);
   background: rgb(250, 250, 250);
 }
+
+/* .details-container {
+  padding: .2rem;
+  flex-wrap: wrap;
+  flex-direction: row;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+  width: 100%;
+  justify-content: space-between;
+} */
 
 .project-img {
   border-radius: 2rem;
@@ -533,17 +549,47 @@ footer p {
 /* entire container, keeps perspective */
 .flip-container {
 	perspective: 1000px;
+  /* justify-content: space-between;  */
+  padding-top: 1.5rem;
+  /* flex: 1; */
+  /* background: white; */
+  /* border-radius: 2rem; */
+  /* border: rgb(53, 53, 53) 0.1rem solid; */
+  /* border-color: rgb(163, 163, 163); */
+  text-align: center;
+  width: 100%;
+}
+
+.flip-container1 {
+	perspective: 1000px;
+  /* justify-content: space-between;  */
+  padding-top: 1.5rem;
+  /* flex: 1; */
+  /* background: white; */
+  /* border-radius: 2rem; */
+  /* border: rgb(53, 53, 53) 0.1rem solid; */
+  /* border-color: rgb(163, 163, 163); */
+  text-align: center;
+  width: 100%;
 }
 	/* flip the pane when hovered */
 	.flip-container:hover .flipper, .flip-container.hover .flipper {
 		transform: rotateY(180deg);
 	}
 
+
 .flip-container, 
 .front, 
 .back {
-	width:100%;
-	height: 500px!important;
+	width:320px;
+	height: 480px;
+}
+
+.flip-container1, 
+.front, 
+.back {
+	width:320px;
+	height: 480px;
 }
 
 /* flip speed goes here */
